<resources>
    <string name="game_levels_leadersboard">CgkIwtaelIkREAIQDw</string>
    <string name="app_name">"טריוויה"</string>
    <string name="buttonNewGameAllQuestionsText">"כל השאלות"</string>
    <string name="textViewQuestionText">שאלה</string>
    <string name="buttonAnswer1">""</string>
    <string name="buttonUpdateDatabaseText">"עדכן מאגר שאלות"</string>
    <string name="textViewTimeTitleText">"זמן"</string>
    <string name="textViewNumberOfQuestionsLeftTitle">"שאלות"</string>
    <string name="textViewQuestionDifficultyTitle">"קושי"</string>
    <string name="buttonReportMistakeInQuestion">"דווח שגיאה"</string>
    <string name="editTextPreferenceDelayBetweenQuestionsSummary">"עיכוב בין השאלות אלפיות השנייה"</string>
    <string name="editTextPreferenceDelayBetweenQuestionsTitle">"עיכוב בין שאלות"</string>
    <string name="checkBoxPreferenceAllowUpdateMobileNetworkRoamingSummary">"עדכון כאשר רשת במצב נדידה (לא מומלץ)"</string>
    <string name="checkBoxPreferenceAllowUpdateMobileNetworkRoamingTitle">"אפשר עדכון בנדידה "</string>
    <string name="checkBoxPreferenceAllowUpdateMobileNetwork3GTitle">"עדכון ברשת 3G"</string>
    <string name="checkBoxPreferenceAllowUpdateMobileNetwork3GSummary">"עדכן רק רשתות 3G ומעלה"</string>
    <string name="checkBoxPreferenceAllowUpdateMobileNetworkTitle">"לאפשר עדכונים באמצעות הרשת הסלולרית"</string>
    <string name="checkBoxPreferenceAllowUpdateMobileNetworkSummary">"אפשר עדכונים באמצעות התקן הרשת הסלולרית (שים לב!!! ייתכן תשלום נוסף לספק השירות עבור השימוש בהתקן זה)"</string>
    <string name="checkBoxPreferenceAllowUpdateWifiTitle">"עדכון באמצעות WiFi"</string>
    <string name="checkBoxPreferenceAllowUpdateWifiSummary">"אפשר עדכון באמצעות WiFi"</string>
    <string name="checkBoxPreferenceShowReportQuestionTitle">"דווח על שגיאה"</string>
    <string name="checkBoxPreferenceShowReportQuestionSummary">"הראה אפשרות לדווח שגיאה בשאלה"</string>
    <string name="preferenceCategoryDatabaseServerAdvancedTitle">"שאלות שרת רשת"</string>
    <string name="editTextPreferencePrimaryServerIPSummary">"כתובת השרת"</string>
    <string name="editTextPreferencePrimaryServerIPTitle">"שרת ה-IP"</string>
    <string name="editTextPreferenceCountDownTimerSummary">"כמה זמן עבור כל שאלה לענות"</string>
    <string name="editTextPreferenceCountDownTimerTitle">"כמה זמן לשאלה"</string>
    <string name="buttonPreferencesText">"תצורה"</string>
    <string name="preferenceCategoryDatabaseServerTitle">"תצורת מסד נתונים"</string>
    <string name="checkBoxPreferenceUploadCorrectWrongUserStatSummary">"העלה כמה פעמים ענו נכון או לא נכון על שאלה"</string>
    <string name="checkBoxPreferenceUploadCorrectWrongUserStatTitle">"העלה הסטטיסטיקה"</string>
    <string name="buttonNewGameSimpleText">"משחק חדש"</string>
    <string name="preferenceCategoryGameRelatedTitle">"הגדרות משחק"</string>
    <string name="checkBoxPreferenceCheckUpdateOnStartupSummary">"בדוק עדכונים "</string>
    <string name="checkBoxPreferenceCheckUpdateOnStartupTitle">"בדוק עדכונים "</string>
    <string name="textViewWelcomeMessageText">"ברוך הבא לאשף ההגדרות. לחץ הבא על מנת להמשיך ובסוף על סיום על מנת לשמור."</string>
    <string name="textViewSetupFinishText">&quot;תודה על שהגדרת את טריוויה. הדבר הבא לעשות הוא ללחוץ סיום ואז לללחוץ על עדכן את מאגר השאלות מהמסך הראשי&quot;</string>
    <string name="textViewSetupFinishTitleText">"טריוויה - סיום"</string>
    <string name="buttonSetupFinishText">"סיום"</string>
    <string name="textViewWizardSetupGameText">"הגדרת משחק"</string>
    <string name="textViewWizardSetupGameHintText">"בדף זה ניתן להגדיר העדפות הקשורות למשחק"</string>
    <string name="checkBoxShowReportQuestionText">"אם ברצונך לעזור לנו על ידי דיווח שגיאה בשאלה, סמן כאן :)"</string>
    <string name="checkBoxUploadWrongCorrectStatisticsText">"העלה סטטיסטיקות. סטטיסטיקות אלו עוזרות לנו לחשב את קושי השאלות"</string>
    <string name="checkBoxCheckUpdateOnStartupText">"בדוק עדכונים בזמן הפעלה"</string>
    <string name="textViewWizardSetupNetworkText">"הגדרת הרשת"</string>
    <string name="textViewWizardSetupNetworkHintText">"בדף זה ניתן להגדיר איך תוכל לקבל עדכונים עבור מאגר השאלות"</string>
    <string name="checkBoxAllowUpdateUsingWifiText">"אפשר עדכון באמצעות WiFi"</string>
    <string name="checkBoxAllowUpdateUsingMobileNetworkText">&quot;אפשר עדכון באמצעות הרשת הסלולרית&quot;</string>
    <string name="checkBoxAllowUpdateUsing3GOnlyText">"אפשר עדכון רק באמצעות רשתות 3G. זוהי האפשרות המומלצת אם ברצונך לעדכן בעזרת הרשת הסלולרית"</string>
    <string name="textViewWelcomeTitle">"טריוויה ברוך הבא"</string>
    <string name="checkBoxPreferencePreferNewQuestionsTitle">"העדף שאלות חדשות"</string>
    <string name="checkBoxPreferencePreferNewQuestionsSummary">"מיין שאלות לפי שאלות חדשות קודם"</string>
    <string name="textViewWizardSetupLanguageText">&quot;שפת ממשק&quot;</string>
    <string name="textViewWizardSetupLanguageMessageText">&quot;בחר את השפת הממשק המועדפת עליך&quot;</string>
    <string name="wifi_is_enabled_but_isn_t_connected_please_check_wifi_connection">"WiFi מופעל, אך אינו מחובר, בדוק את חיבור WiFi"</string>
    <string name="mobile_network_found_but_only_3g_mobile_network_connection_is_allowed_">"רשת הסלולרית נמצא רך רק חיבור רשת 3G נייד מותר, בדוק הגדרות"</string>
    <string name="check_preferencs_to_allow_slow_networks">"בדוק את העדפות כדי לאפשר רשתות איטיות"</string>
    <string name="mobile_connection_was_found_but_it_is_in_roaming">"חיבור נייד נמצא אבל זה במצב נדידה"</string>
    <string name="mobile_device_is_online_but_option_is_disabled_please_check_preferences">"הרשת הניידת קיימת אך אפשרות זו מבוטלת בהגדרות. אנא בדקו הגדרות"</string>
    <string name="no_network_devices_are_available_check_your_wifi_or_mobile_network_connection">"אין התקני רשת זמינים, בדוק חיבור WiFi או רשת הנייד שלך"</string>
    <string name="downloading_questions">"מוריד שאלות"</string>
    <string name="downloading_categories">"מוריד נושאים"</string>
    <string name="error_while_trying_to_update_from_server">"שגיאה בעת ניסיון לעדכן משרת"</string>
    <string name="no_questions_in_database">"אין שאלות במאגר, אנא עדכן"</string>
    <string name="starting_level_">"החל שלב "</string>
    <string name="start">"התחל"</string>
    <string name="levels_game_over">"משחק נגמר"</string>
    <string name="no_more_questions_in_this_level_going_to_next_level_">"אין שאלות נוספות ברמה זו, הולך לרמה הבאה :)"</string>
    <string name="error_sent_thanks_">"שגיאה נשלחה, תודה :)"</string>
    <string name="game_over">"המשחק נגמר"</string>
    <string name="no_update_available">"אין עדכון"</string>
    <string name="uploading_correct_wrong_statistics">"העלאת נתונים סטטיסטיים"</string>
    <string name="update_is_available_for_">"העדכון זמין עבור "</string>
    <string name="_questions_update_database_">" שאלות. לעדכן את מסד הנתונים?"</string>
    <string name="update">"עדכן"</string>
    <string name="cancel">"ביטול"</string>
    <string name="later">לא עכשיו</string>
    <string name="checking_for_updates_">"מחפש עדכונים … "</string>
    <string name="error_occoured_stopping_upload_check_server_url_or_connectivity">"שגיאה קרתה בזמן העלאה, בדוק הגדרות שרת או קישוריות"</string>
    <string name="inserting_questions_to_database">"הוספת שאלות למאגר"</string>
    <string name="show_first_time_configuration">אשף הגדרות</string>
    <string name="buttonDeleteDatabaseText">מחק מאגר נתונים</string>
    <string name="buttonManageDatabaseText">נהל מאגר נתונים</string>
    <string name="language">שפה</string>
    <string name="ui_language">שפת ממשק</string>
    <string name="checkBoxShowCorrectAnswer">הראה תשובה נכונה</string>
    <string name="checkBoxPreferenceShowCorrectAnswerSummary">הראה תשובה נכונה (בצבע ירוק) במקרה ותשובה שגויה נענתה</string>
    <string name="checkBoxPreferenceShowCorrectAnswerText">הראה תשובה נכונה</string>
    <string name="back">הקודם</string>
    <string name="next">הבא</string>
    <string name="menuItemAboutTitle">אודות</string>
    <string name="menuItemPreferencesTitle">הגדרות</string>
    <string name="menuItemExitTitle">יציאה</string>
    <string name="buttonSendSuggestionText">שלח הצעה</string>
    <string name="textViewAboutText">משחק הטריוויה נוצר כפרוייקט למידה, מקווה כי תהנו</string>
    <string name="textViewAboutVersionText">"גירסא: "</string>
    <string name="textViewLivesLeftText">"חיים שנותרו"</string>
    <string name="delete_database_">למחוק מאגר נתונים?</string>
    <string name="are_you_sure_you_want_to_delete_the_database_">האם אתה בטוח שברצונך למחוק את המאגר נתונים?</string>
    <string name="yes">כן</string>
    <string name="buttonSendErrorText">שלח</string>
    <string name="editTextErrorDetailsHint">&#8230; מלא שגיאה כאן</string>
    <string name="textViewWhichQuestionText">איזה שאלה?</string>
    <string name="textViewSetupFinishText1">במקה של תקלה או אם יש לכם הצעה אנא שלחו בטופס הצעת דרך חלון אודות</string>
    <string name="instructions_message">הוראות</string>
    <string name="instructions">הוראות</string>
    <string name="title">כותרת</string>
    <string name="show_game_instructions_before_starting_the_game">הראה הוראות לפני התחלת משחק</string>
    <string name="howToPlayAllQuestions1">1. המשחק מתחיל עם 0 חיים</string>
    <string name="howToPlayAllQuestions2">2. תשובה נכונה מעלה את החיים בשווי קושי השאלה לדוגמא שאלה עם קושי 6 תזכה תעלה את החיים ב6</string>
    <string name="howToPlayAllQuestions3">3. תשובה לא נכונה תוריד מהחיים שלך בשווי החיים</string>
    <string name="howToPlayAllQuestions4">4. כאשר החיים מגיעים מתחת ל0 המשחק נגמ</string>
    <string name="howToPlayAllQuestionsTitle">כל השאלות - מבחן סובייטי</string>
    <string name="howToPlayNewGame1">1. בתחילת המשחק יש לך 3 חיים</string>
    <string name="howToPlayNewGame2">2. תשובה לא נכונה מוריד 1 חיים</string>
    <string name="howToPlayNewGame3">3. המשחק נגמר כאשר החיים מגיעים ל0 או כאשר ענית על כל השאלות</string>
    <string name="howToPlayNewGameTitle">משחק חדש</string>
    <string name="show_help_new_game_title">הוראות משחק חדש</string>
    <string name="show_help_new_game_summary">הראה הוראות לפני משחק חדש</string>
    <string name="show_help_categories_game_summary">הראה הוראות לפני משחק קטגוריות</string>
    <string name="buttonCloseHowToPlayText">סגור</string>
    <string name="buttonNewGameCategoriesText">נושאים</string>
    <string name="textViewWizardSetupQuestionLanguageText">שאלות - שפה</string>
    <string name="checkBoxQuestionLanguageHebrewText">עברית</string>
    <string name="checkBoxQuestionLanguageEnglishText">אנגלית</string>
    <string name="textViewQuestionLanguageDetailsText">בחר את השפה בה יוצגו השאלות. עלייך לבחור לפחות אחת</string>
    <string name="buttonManageUsersText">נהל משתמשים</string>
    <string name="fill_in_username">אנא הכנס שם משתמש</string>
    <string name="fill_in_password">אנא הכנס סיסמא</string>
    <string name="send">שלח</string>
    <string name="fill_in_email">אנא הכנס אימייל</string>
    <string name="high_scores">תוצאות הכי טובות</string>
    <string name="current_user_is_">"שם משתמש מחובר:  "</string>
    <string name="register_you_user">Register you User</string>
    <string name="register_a_user_in_order_to_publish_scores_get_updates_publish_questions_tbd_and_more">רשום משתמש על מנת להנות ממשחק נגד אחרים (עדיין לא יושם) , שליחת שאלות וכדומה</string>
    <string name="suggest_a_question">שלח שאלה</string>
    <string name="question">שאלה</string>
    <string name="correct_answer">תשובה נכונה</string>
    <string name="wrong_answer_1">תשובה שגויה #1</string>
    <string name="wrong_answer_2">תשובה שגויה #2</string>
    <string name="wrong_answer_3">תשובה שגויה #3</string>
    <string name="send_suggestion">שלח הצעה</string>
    <string name="more">עוד</string>
    <string name="login_to_facebook">התחבר לFacebook</string>
    <string name="or_use_your_facebook_account_and_press_the_login_button_">או התחבר בעזרת חשבון הFacebook</string>
</resources>