<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editTextQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question"
        android:layout_margin="4dp"
        android:inputType="text" >
    </EditText>

    <EditText
        android:id="@+id/editTextAnswerCorrect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correct_answer"
        android:layout_margin="4dp"
        android:inputType="text"
         />

    <EditText
        android:id="@+id/editTextAnswerWrong1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/wrong_answer_1"
        android:layout_margin="4dp"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/editTextAnswerWrong2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/wrong_answer_2"
        android:layout_margin="4dp"
         />

    <EditText
        android:id="@+id/editTextAnswerWrong3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/wrong_answer_3"
        android:layout_margin="4dp"
         />

    <Button
        android:id="@+id/buttonSendSuggestion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/custom_menu_button"
        android:text="@string/send_suggestion" />

</LinearLayout>