<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_shape"
    android:orientation="vertical"
    android:id="@+id/relativeLayoutActivityTrivia"
     >

    <TextView
        android:id="@+id/textViewCurrentUser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="4dp"
        android:text="@string/current_user_is_"
        android:textColor="#000000"
        android:textSize="16dp" />

    <Button
        android:id="@+id/buttonNewGameSimple"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        android:layout_centerInParent="true"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="@drawable/custom_menu_button"
        android:text="@string/buttonNewGameSimpleText" />

    <Button
        android:id="@+id/buttonNewGameAllQuestions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonNewGameSimple"
        android:layout_margin="4dp"
        android:background="@drawable/custom_menu_button"
        android:text="@string/buttonNewGameAllQuestionsText" />

    <Button
        android:id="@+id/buttonNewGameCategories"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonNewGameAllQuestions"
        android:layout_margin="4dp"
        android:background="@drawable/custom_menu_button"
        android:text="@string/buttonNewGameCategoriesText" />

    <Button
        android:id="@+id/buttonGameScores"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonNewGameCategories"
        android:layout_margin="4dp"
        android:background="@drawable/custom_menu_button"
        android:text="@string/high_scores" />

    <SlidingDrawer
        android:id="@+id/sd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:content="@+id/sdcontent"
        android:handle="@+id/sdhandle" 
        android:allowSingleTap="true"
        
        >

        <Button
            android:id="@+id/sdhandle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_menu_button"
            android:text="@string/more" />

        <RelativeLayout
            android:id="@+id/sdcontent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000"
             >

            <Button
                android:id="@+id/buttonUpdateDatabase"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="4dp"
                android:background="@drawable/custom_menu_button"
                android:text="@string/buttonUpdateDatabaseText" />

            <Button
                android:id="@+id/buttonManageUsers"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonUpdateDatabase"
                android:layout_margin="4dp"
                android:background="@drawable/custom_menu_button"
                android:text="@string/buttonManageUsersText" />

            <Button
                android:id="@+id/buttonManageDatabase"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonManageUsers"
                android:layout_margin="4dp"
                android:background="@drawable/custom_menu_button"
                android:text="@string/buttonManageDatabaseText" />

            <Button
                android:id="@+id/buttonSuggestQuestion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonManageDatabase"
                android:layout_margin="4dp"
                android:background="@drawable/custom_menu_button"
                android:text="@string/suggest_a_question" />

            <Button
                android:id="@+id/buttonPreferences"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonSuggestQuestion"
                android:layout_margin="4dp"
                android:background="@drawable/custom_menu_button"
                android:text="@string/buttonPreferencesText" />
        </RelativeLayout>
    </SlidingDrawer>

</RelativeLayout>