<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wizard_setup_user1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewWizardSetupUser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="4dp"
        android:text="@string/register_you_user"
        android:textSize="20dp" />

    <View
        android:id="@+id/viewLineRegisterUser"
        android:layout_width="fill_parent"
        android:layout_height="4dip"
        android:layout_below="@+id/textViewWizardSetupUser"
        android:background="@drawable/custom_line_purple" />

    <TextView
        android:id="@+id/textViewWizardSetupUserRegisterMessage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewLineRegisterUser"
        android:layout_margin="4dp"
        android:layout_marginBottom="20dp"
        android:text="@string/register_a_user_in_order_to_publish_scores_get_updates_publish_questions_tbd_and_more" />

    <LinearLayout
        android:id="@+id/linearLayoutUserRequestDetails"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewWizardSetupUserRegisterMessage"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/round_edittext"
            android:hint="@string/fill_in_username"
            android:padding="5dip" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/round_edittext"
            android:hint="@string/fill_in_password"
            android:inputType="textPassword"
            android:padding="3dip" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/round_edittext"
            android:hint="@string/fill_in_email"
            android:padding="5dip" />

        <Button
            android:id="@+id/buttonUserRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/custom_menu_button"
            android:text="@string/send" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewFacebook"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutUserRequestDetails"
        android:layout_marginTop="10dp"
        android:text="@string/or_use_your_facebook_account_and_press_the_login_button_"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <ImageView
        android:id="@+id/imageViewFacebookButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewFacebook"
        android:layout_margin="4dp"
        android:contentDescription="@string/login_to_facebook"
        android:src="@drawable/login_button" />

</RelativeLayout>