<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/buttonNewGameSimple"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonNewGameAllQuestions"
        android:layout_margin="4dp"
        android:text="@string/buttonNewGameSimpleText" />

    <Button
        android:id="@+id/buttonNewGameAllQuestions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="4dp"
        android:text="@string/buttonNewGameAllQuestionsText" />

    <Button
        android:id="@+id/buttonManageDatabase"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonNewGameAllQuestions"
        android:layout_margin="4dp"
        android:text="@string/buttonManageDatabaseText" />
    

    <Button
        android:id="@+id/buttonPreferences"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonManageDatabase"
        android:layout_margin="4dp"
        android:text="@string/buttonPreferencesText" />

  

</RelativeLayout>