<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonUpdateDatabaseText"
            android:id="@+id/buttonUpdateDatabase"
            />

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonSendSuggestionText"
            android:id="@+id/buttonSendSuggestion"
            />


    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/suggest_a_question"
            android:id="@+id/buttonSendQuestion"
            />
</LinearLayout>