<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/textViewAboutVersion"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/textViewAboutVersionText"
        android:layout_margin="4dp"
        />
    <TextView 
        android:id="@+id/textViewAbout"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/textViewAboutText"
        android:layout_margin="4dp"
        />
    <Button 
        android:id="@+id/buttonSendSuggestion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonSendSuggestionText"
        android:layout_margin="4dp"
        android:background="@drawable/custom_menu_button"
        />
    
    

</LinearLayout>